<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.BasketFragment"
    android:background="@drawable/pattern">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_H_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_H_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_H_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0"
        app:layout_constraintGuide_begin="20dp"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03"
        app:layout_constraintGuide_begin="20dp"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />
    <ProgressBar
        android:id="@+id/progress_bar_basket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorPrimary"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gideLine_H_1_cons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1"/>


        <TextView
            android:id="@+id/item_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/gideLine_H_1_cons"
            app:layout_constraintTop_toTopOf="@id/constrain"
            android:text="@string/items"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/amount_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/item_tx"
            app:layout_constraintTop_toTopOf="@id/constrain"
            app:layout_constraintEnd_toStartOf="@id/price_tx"
            android:text="@string/amount"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/price_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/amount_tx"
            app:layout_constraintTop_toTopOf="@id/constrain"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/price"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/constrain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/gideLine_H_2">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/basket_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </ScrollView>

    <TextView
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="@id/gideLine_H_2"
        app:layout_constraintStart_toStartOf="@id/gideLine_v_1"
        app:layout_constraintEnd_toEndOf="@id/gideLine_v_4"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/total_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line1"
        app:layout_constraintStart_toStartOf="@id/gideLine_v_2"
        android:layout_marginTop="7dp"
        android:text="@string/total"
        android:textAllCaps="true"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/price_egp"
        android:textAllCaps="true"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/gideLine_v_6"
        app:layout_constraintTop_toBottomOf="@id/line1"/>
    <TextView
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/total_price"
        app:layout_constraintStart_toStartOf="@id/gideLine_v_1"
        app:layout_constraintEnd_toEndOf="@id/gideLine_v_4"
        android:layout_marginTop="5dp"/>
    <EditText
        android:id="@+id/promocode_edit_tx"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/line2"
        app:layout_constraintStart_toStartOf="@id/gideLine_v_2"
        app:layout_constraintEnd_toEndOf="@id/gideLine_v_3"
        android:layout_marginTop="10dp"
        android:hint="@string/PROMO_CODE"
        android:textColorHint="@color/colorPrimaryDark"
        android:background="@drawable/promocode_bt"
        android:padding="5dp"/>
    <Button
        android:id="@+id/check_promo_code"
        android:layout_width="0dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="@id/gideLine_v_3"
        app:layout_constraintTop_toTopOf="@id/promocode_edit_tx"
        app:layout_constraintBottom_toBottomOf="@id/promocode_edit_tx"
        app:layout_constraintEnd_toEndOf="@id/gideLine_v_6"
        android:text="@string/ACTIVE"
        android:layout_marginStart="5dp"
        android:textSize="@dimen/_6ssp"
        android:background="@drawable/background_add_to_basket_bt"
        android:textColor="@color/white"/>


    <Spinner
        android:id="@+id/spinner_address_items"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/Spinner_address_items"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:layout_marginStart="5dp"
        android:dropDownSelector="#000"
        android:defaultFocusHighlightEnabled="true"
        app:layout_constraintStart_toStartOf="@id/promocode_edit_tx"
        app:layout_constraintTop_toBottomOf="@id/promocode_edit_tx"
        app:layout_constraintEnd_toEndOf="@id/check_promo_code"
        android:background="@drawable/promocode_bt"
        android:layout_marginTop="@dimen/_10sdp"
        />
        <Button
            android:id="@+id/order_now_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spinner_address_items"
            app:layout_constraintStart_toStartOf="@id/spinner_address_items"
            app:layout_constraintEnd_toEndOf="@id/spinner_address_items"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/order_now"
            android:background="@drawable/background_add_to_basket_bt"
            android:textColor="@color/white"
            android:textSize="@dimen/_9ssp"
            android:padding="5dp"
            />
</androidx.constraintlayout.widget.ConstraintLayout>