<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97"
        />

    <TextView
        android:id="@+id/product_name_receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/product_name"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_11ssp"/>
<!--    <TextView-->
<!--        android:id="@+id/product_price_receipt"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintEnd_toEndOf="@id/gideLine_v_4"-->
<!--        app:layout_constraintTop_toTopOf="@id/product_name_receipt"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/product_name_receipt"-->
<!--        android:text="@string/price"-->
<!--        android:textColor="@color/colorPrimaryDark"-->
<!--        android:textSize="@dimen/_11ssp"/>-->

    <TextView
        android:id="@+id/quantity_laundry_cleaning_receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/product_name_receipt"
        app:layout_constraintStart_toStartOf="@id/gideLine_v_1"
        app:layout_constraintBottom_toTopOf="@id/quantity_laundry_receipt"
        android:text="@string/laundryAndCleaning"
        android:layout_marginTop="@dimen/_10sdp"
        android:textAllCaps="true"
        android:visibility="invisible"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_10ssp"/>

    <TextView
        android:id="@+id/price_laundry_cleaning_receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/quantity_laundry_cleaning_receipt"
        app:layout_constraintBottom_toBottomOf="@id/quantity_laundry_cleaning_receipt"
        app:layout_constraintStart_toStartOf="@id/gideLine_v_3"
        android:text="@string/price_egp"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/_5sdp"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_10ssp"/>

    <TextView
        android:id="@+id/quantity_laundry_receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/quantity_laundry_cleaning_receipt"
        app:layout_constraintStart_toStartOf="@id/gideLine_v_1"
        android:text="@string/laundry"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/_5sdp"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_10ssp"/>

    <TextView
        android:id="@+id/price_laundry_receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/quantity_laundry_receipt"
        app:layout_constraintBottom_toBottomOf="@id/quantity_laundry_receipt"
        app:layout_constraintStart_toStartOf="@id/gideLine_v_3"
        android:text="@string/price_egp"
        android:layout_marginTop="@dimen/_5sdp"
        android:visibility="invisible"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_10ssp"/>




</androidx.constraintlayout.widget.ConstraintLayout>