<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ndroid="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97"
        />

    <ImageView
        android:id="@+id/product_image_my_order"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/mainlogo"
        app:layout_constraintStart_toStartOf="@id/gideLine_v_1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/product_name_my_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/product_image_my_order"
        app:layout_constraintTop_toTopOf="@id/product_image_my_order"
        app:layout_constraintBottom_toBottomOf="@id/product_image_my_order"
        android:text="@string/product_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_8ssp"/>
    <TextView
        android:id="@+id/product_amount_my_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/product_name_my_order"
        app:layout_constraintTop_toTopOf="@id/product_name_my_order"
        app:layout_constraintBottom_toBottomOf="@id/product_name_my_order"
        app:layout_constraintEnd_toStartOf="@id/product_price_my_order"
        android:text="@string/amount"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_8ssp"/>
    <TextView
        android:id="@+id/product_price_my_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/gideLine_v_4"
        app:layout_constraintTop_toTopOf="@id/product_amount_my_order"
        app:layout_constraintBottom_toBottomOf="@id/product_amount_my_order"
        android:text="@string/price"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_8ssp"/>


</androidx.constraintlayout.widget.ConstraintLayout>