<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_product_items"
    android:layout_margin="10dp"
    android:padding="10dp"
    >
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.47"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gideLine_v_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98"
        />
    <ImageView
        android:id="@+id/product_image_basket"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/product_name_basket"
        app:layout_constraintBottom_toBottomOf="@id/product_cleaning_laundry_basket"/>
    <TextView
        android:id="@+id/product_name_basket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/product_cleaning_basket"
        app:layout_constraintStart_toEndOf="@id/product_image_basket"
        android:text="@string/T_SHIRT"
        android:layout_marginLeft="3dp"
        android:textStyle="bold"
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/product_cleaning_basket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/product_name_basket"
        app:layout_constraintStart_toStartOf="@id/product_name_basket"
        app:layout_constraintBottom_toTopOf="@id/product_cleaning_laundry_basket"
        android:text="2 Luandry"
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/_3sdp"/>
    <TextView
        android:id="@+id/product_cleaning_laundry_basket"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/product_cleaning_basket"
        app:layout_constraintStart_toStartOf="@id/product_name_basket"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="2 Cleaning &amp; Laundry"
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/_3sdp"/>

    <TextView
        android:id="@+id/product_count_basket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/product_name_basket"
        app:layout_constraintStart_toStartOf="@id/gideLine_v_2"
        app:layout_constraintBottom_toBottomOf="@id/product_cleaning_laundry_basket"
        android:text="@string/num"
        android:layout_marginLeft="3dp"
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/product_price_basket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/product_count_basket"
        app:layout_constraintStart_toStartOf="@id/gideLine_v_3"
        app:layout_constraintBottom_toBottomOf="@id/product_count_basket"
        android:text="@string/price"
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/colorPrimaryDark"
        />
    <ImageView
        android:id="@+id/remove_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cancel"
        app:layout_constraintEnd_toEndOf="@id/gideLine_v_4"
        app:layout_constraintTop_toTopOf="@id/product_price_basket"
        app:layout_constraintBottom_toBottomOf="@id/product_price_basket"/>


</androidx.constraintlayout.widget.ConstraintLayout>